# opengl-beziercurves-bsplines-extrusions

./: CMakeLists.txt  README.md
imgui/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp
include/: application.h  casteljau.h  cube.h  de_boor.h  directional_light.h  extruded.h  light.h  object.h  orbit_camera.h  phong_material.h  point.h  point_light.h  scene.h  shader.h  shape.h
include/glad/: glad.h
shaders/: basic.fs.glsl  basic.vs.glsl  controlPoints.fs.glsl  flat.fs.glsl  flat.vs.glsl  phong.fs.glsl  phong.vs.glsl
src/: application.cpp  casteljau.cpp  cube.cpp  de_boor.cpp  directional_light.cpp  extruded.cpp  glad.c  light.cpp  main.cpp  main_phong.cpp  object.cpp  orbit_camera.cpp  phong_material.cpp  point.cpp  point_light.cpp  scene.cpp  shader.cpp  shape.cpp
